Fix overflow issues

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -80,8 +80,8 @@ body {
 }
 
 .list-view {
- display:block;
- width:100%;
+ margin-left:auto;
+ margin-right:auto;
  height:100%;
 }
 
@@ -89,10 +89,11 @@ body {
  display:block;
  line-height:45px;
  padding-left:10px;
- width:100%;
+ margin-left:auto;
+ margin-right:auto;
  text-decoration:none;
  height:45px;
- border-bottom: 1px solid #999;
+ border-bottom: 1px solid  #999;
 }
 
 .list-item:link {
